--- a/SocketClient/SocketClient/SocketClient.csproj
+++ b/SocketClient/SocketClient/SocketClient.csproj
@@ -68,6 +68,12 @@
     <Compile Include="player\comparators\SortByDuration.cs" />
     <Compile Include="player\comparators\SortByArtist.cs" />
     <Compile Include="player\comparators\SortByTitle.cs" />
+    <Compile Include="player\DialogForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="player\DialogForm.Designer.cs">
+      <DependentUpon>DialogForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="player\Media.cs" />
     <Compile Include="player\Player.cs">
       <SubType>Form</SubType>
@@ -82,6 +88,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="player\DialogForm.resx">
+      <DependentUpon>DialogForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="player\Player.resx">
       <DependentUpon>Player.cs</DependentUpon>
